--- a/uniqueSubpath/pbt_project.yml
+++ b/uniqueSubpath/pbt_project.yml
@@ -19,6 +19,19 @@ pipelines:
       outputs: []
     subgraphs: []
     dependencies: {}
+  pipelines/Renee_PredovicChris_P__WheatzenraisinsDenny_Greenfelder:
+    name: Renee_PredovicChris_P__WheatzenraisinsDenny_Greenfelder
+    description: null
+    author: cb55fvfb.sv9ctw3f@5qz627j4.com
+    mode: batch
+    artefactID: ''
+    language: sql
+    createdAt: '2025-07-04 21:06:59'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets: {}
 templates: {}
 jobs: {}
